--- a/frontend/src/app/app.topbar.component.html
+++ b/frontend/src/app/app.topbar.component.html
@@ -1,5 +1,5 @@
-<div class="topbar clearfix">
-    <div class="topbar-left">
+<div style="max-height: 60px;"  class="topbar clearfix">
+    <div style="max-height: 60px" class="topbar-left">
         <div class="logo"></div>
     </div>
     <div class="topbar-right">
