--- a/frontend/src/assets/layout/css/layout-teal.css
+++ b/frontend/src/assets/layout/css/layout-teal.css
@@ -630,7 +630,7 @@
       display: inline-block;
       vertical-align: middle;
       width: 200px;
-      height: 30px;
+      max-height: 60px;
       background: url("../images/logo.jpg") top left no-repeat; }
     .landing-wrapper #header .header-top #menu {
       float: right;
@@ -900,7 +900,7 @@
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .landing-wrapper .header .header-top .logo {
     background: url("../images/logo2x.jpg") top left no-repeat;
-    background-size: 200px 30px; } }
+    background-size: 200px 60px; } }
 html {
   height: 100%; }
 
@@ -943,7 +943,7 @@ body {
     width: 100%;
     height: 100%;
     background: url("../images/logo2x.jpg") top center no-repeat;
-    background-size: 175px 75px; }
+    background-size: 175px 60px; }
   .layout-container .topbar .topbar-left {
     box-sizing: border-box;
     padding: auto;
