BASIS-60438 - [LAYOUT] Exportar ( Finalizado )

--- a/frontend/src/app/especialidade/especialidade.component.html
+++ b/frontend/src/app/especialidade/especialidade.component.html
@@ -26,11 +26,12 @@
           <p-column header="Nome da Especialidade" field="nome" [sortable]="true"></p-column>
           <p-column header="Descrição da Especialidade" field="descricao" [sortable]="true"></p-column>
         </basis-datatable>
-        <div class="ui-g-12 ui-md-2">
-          <app-botoes-exportacao resourceName="especialidade" [query]="valueFiltroCampo">
-          </app-botoes-exportacao>
-      </div>
-      </div>
+        <div class="ui-g-12 ui-md-11" style="margin-left: 8px;">
+          <div class="ui-g-12 ui-md-2" style="float: right">
+            <app-botoes-exportacao resourceName="especialidade" [query]="valueFiltroCampo">
+            </app-botoes-exportacao>
+          </div>
+        </div>
     </div>
   </div>
 </div>
