--- a/frontend/src/app/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro.component.html
@@ -37,9 +37,11 @@
                         </ng-template>
                     </p-column>
                 </basis-datatable>
-                <div class="ui-g-12 ui-md-2">
-                    <app-botoes-exportacao resourceName="precadastro" [query]="valueFiltroCampo">
-                    </app-botoes-exportacao>
+                <div class="ui-g-12 ui-md-11" style="margin-left: 8px;">
+                    <div class="ui-g-12 ui-md-2" style="float: right">
+                        <app-botoes-exportacao resourceName="precadastro" [query]="valueFiltroCampo">
+                        </app-botoes-exportacao>
+                    </div>
                 </div>
             </div>
         </div>
