--- a/frontend/src/app/tipo-resposta/tipo-resposta.component.html
+++ b/frontend/src/app/tipo-resposta/tipo-resposta.component.html
@@ -23,10 +23,12 @@
         <basis-datatable [url]="searchUrl" (buttonClick)="datatableClick($event)"  #datatable [rows]="10" [rowsPerPageOptions]="[5,10,20,30,40,50]" >
           <p-column header="Resposta" field="resposta"></p-column>
         </basis-datatable>
-        <div class="ui-g-12 ui-md-2">
-          <app-botoes-exportacao resourceName="tipoResposta" [query]="valueFiltroCampo">
-          </app-botoes-exportacao>
-      </div>
+        <div class="ui-g-12 ui-md-11" style="margin-left: 8px;">
+          <div class="ui-g-12 ui-md-2" style="float: right">
+            <app-botoes-exportacao resourceName="tipoResposta" [query]="valueFiltroCampo">
+            </app-botoes-exportacao>
+          </div>
+        </div>
       </div>
     </div>
   </div>
