--- a/frontend/src/app/perfil/perfil.component.html
+++ b/frontend/src/app/perfil/perfil.component.html
@@ -4,13 +4,14 @@
     <div class="card card-w-title">
       <h1>Perfis e Permissões</h1>
       <div class="ui-g">
-        <div class="ui-g-12 ui-md-4">
+        <div class="ui-g-12 ui-md-12">
             <span class="md-inputfield">
               <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
               (keyup.enter)="valueFiltro(elasticQuery.query)" name="filtro"/>
               <label>Pesquisar</label>
             </span>
         </div>
+        <div class="ui-g-12 ui-md-3"></div>
         <div class="ui-g-12 ui-md-6">
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="valueFiltro(elasticQuery.query)"></button>
