BASIS-60438 ajustando o botao exportar do usuário

--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -31,8 +31,8 @@
             </ng-template>
           </p-column>
         </basis-datatable>
-          <div class="ui-g-12 ui-md-11" style="margin-left: 8px;">
-              <div class="ui-g-12 ui-md-2" style="float: right">
+          <div class="ui-g-12 ui-md-11">
+              <div class="ui-g-12 ui-md-3" style="float: right">
                   <app-botoes-exportacao resourceName="usuario" [query]="valueFiltroCampo"></app-botoes-exportacao>
               </div>
           </div>
