--- a/frontend/src/app/tipo-resposta/tipo-resposta-form.component.html
+++ b/frontend/src/app/tipo-resposta/tipo-resposta-form.component.html
@@ -5,10 +5,10 @@
       <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
         <div class="ui-g form-group">
           <input type="hidden" name="id" pInputText [(ngModel)]="tipoResposta.id" readonly/>
-          <div class="ui-g-12 ui-md-6">
+          <div class="ui-g-12 ui-md-12">
             <span class="md-inputfield">
               <input type="text" name="resposta" [(ngModel)]="tipoResposta.resposta" pInputText required minlength="2" maxlength="255"/>
-              <label>Resposta</label>
+              <label>Resposta *</label>
               <div *ngIf= "editForm.controls['resposta'] && !editForm.controls['resposta'].valid && (editForm.controls['resposta'].touched || editForm.submitted)" class="ui-message ui-messages-error">
                 Campo obrigatório!
               </div>
