--- a/frontend/src/assets/layout/css/layout-teal.css
+++ b/frontend/src/assets/layout/css/layout-teal.css
@@ -813,7 +813,8 @@
   vertical-align: middle;
   width: 200px;
   height: 30px;
-  background: url("../images/logo.png") top left no-repeat;
+  background: url("../images/logo2x.jpg") top left no-repeat;
+  background-size: 175px 60px;
 }
 .landing-wrapper #header .header-top #menu {
   float: right;
@@ -1203,14 +1204,14 @@ body a {
 .layout-container .topbar .logo {
   display: inline-block;
   vertical-align: middle;
-  width: 200px;
-  height: 30px;
-  background: url("../images/logo2x.png") top left no-repeat;
-  background-size: 200px 30px;
+  width: 100%;
+  height: 100%;
+  background: url("../images/logo2x.png") top no-repeat;
+  background-size: 175px 60px;
 }
 .layout-container .topbar .topbar-left {
   box-sizing: border-box;
-  padding: 20px;
+  padding: auto;
   height: 75px;
   width: 250px;
   background-color: #00695C;
