--- a/frontend/src/assets/layout/css/layout-teal.css
+++ b/frontend/src/assets/layout/css/layout-teal.css
@@ -1206,7 +1206,7 @@ body a {
   vertical-align: middle;
   width: 100%;
   height: 100%;
-  background: url("../images/logo2x.png") top no-repeat;
+  background: url("../images/logo2x.jpg") top no-repeat;
   background-size: 175px 60px;
 }
 .layout-container .topbar .topbar-left {
