--- a/frontend/src/app/prescricao-medica/prescricao-medica.component.html
+++ b/frontend/src/app/prescricao-medica/prescricao-medica.component.html
@@ -1,4 +1,4 @@
-<div class="ui-g ui fluid">
+<div class="ui-g ui-fluid">
     <div class="ui-g-12">
         <div class="card card-w-title">
             <h1>Pacientes</h1>
@@ -18,10 +18,20 @@
 
                 <basis-datatable type="server" [url]="searchUrl" [rows]="10" [value]="pacientes" [disableView]="true" [disableEdit]="true" [disableDelete]="true">
                     <p-column header="Nome" field="nome"></p-column>
-                    <p-column header="Idade" field="idade"></p-column>
+                    <p-column header="Dt. Nascimento" field="dataNascimento">
+                        <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                            <span> {{ rowData[col.field] | date: 'dd/MM/y' }}</span>
+                        </ng-template>
+                    </p-column>
                     <p-column header="Prontuário" field="prontuario"></p-column>
                     <p-column header="Responsável" field="responsavel"></p-column>
-                    <p-column header="Dt. Atendimento" field="dataAtendimento"></p-column>
+                    <p-column header="Dt. Atendimento" field="dataAtendimento">
+                        <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                            <span> {{ rowData[col.field] | date: 'dd/MM/y' }}</span>
+                        </ng-template>
+                    </p-column>
+
+
                     <basis-datatable-button icon="local-dining" name="prescrever-dieta" routerLink="/prescricao-medica/dieta" bTooltip="Prescrever Dieta"
                         class="ui-button-info">
                     </basis-datatable-button>
