--- a/frontend/src/app/pacientes/formulario-paciente/documentos/documentos.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/documentos/documentos.component.html
@@ -1,1 +1,35 @@
-<p>documentos works!</p>
+<form class="ui-g ui-fluid" [formGroup]="documentos">
+  <div class="ui-g-12">
+    <div class="ui-g-4">
+      <input
+        type="text"
+        pInputText
+        placeholder="Número Identidade"
+        formControlName="numeroIdentidade"
+      />
+    </div>
+    <div class="ui-g-4">
+      <input type="text" pInputText placeholder="Órgão Emissor" formControlName="orgaoEmissor" />
+    </div>
+    <div class="ui-g-2">
+      <input type="text" pInputText placeholder="UF" formControlName="uf" />
+    </div>
+    <div class="ui-g-2">
+      <input type="text" pInputText placeholder="Data" formControlName="data" />
+    </div>
+  </div>
+  <div class="ui-g-12">
+    <div class="ui-g-4">
+      <input type="text" pInputText placeholder="CPF" formControlName="cpf" />
+    </div>
+    <div class="ui-g-2">
+      <input type="text" pInputText placeholder="PIS/PASEP" formControlName="pisPasep" />
+    </div>
+    <div class="ui-g-4">
+      <input type="text" pInputText placeholder="CNH" formControlName="cnh" />
+    </div>
+    <div class="ui-g-2">
+      <input type="text" pInputText placeholder="Validade CNH" formControlName="validadeCNH" />
+    </div>
+  </div>
+</form>
